Ex 59 - Vamos utilizar um tema base alternativo, que usa scss ao invés de less

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
   "addons": [
     "intranet_interagi"
   ],
+  "theme": "@kitconcept/volto-light-theme",
   "workspaces": [
     "src/addons/intranet_interagi"
   ],
